--- a/pkg/apis/acme/v1alpha3/BUILD.bazel
+++ b/pkg/apis/acme/v1alpha3/BUILD.bazel
@@ -3,18 +3,20 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
+        "const.go",
         "doc.go",
         "register.go",
+        "types.go",
         "types_challenge.go",
         "types_issuer.go",
         "types_order.go",
         "zz_generated.deepcopy.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/internal/apis/acme",
-    visibility = ["//pkg:__subpackages__"],
+    importpath = "github.com/jetstack/cert-manager/pkg/apis/acme/v1alpha3",
+    visibility = ["//visibility:public"],
     deps = [
         "//pkg/apis/acme:go_default_library",
-        "//pkg/internal/apis/meta:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1beta1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
@@ -32,14 +34,7 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [
-        ":package-srcs",
-        "//pkg/internal/apis/acme/fuzzer:all-srcs",
-        "//pkg/internal/apis/acme/install:all-srcs",
-        "//pkg/internal/apis/acme/v1alpha2:all-srcs",
-        "//pkg/internal/apis/acme/v1alpha3:all-srcs",
-        "//pkg/internal/apis/acme/validation:all-srcs",
-    ],
+    srcs = [":package-srcs"],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
