--- a/pkg/apis/certmanager/v1alpha3/BUILD.bazel
+++ b/pkg/apis/certmanager/v1alpha3/BUILD.bazel
@@ -3,7 +3,9 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
+        "const.go",
         "doc.go",
+        "generic_issuer.go",
         "register.go",
         "types.go",
         "types_certificate.go",
@@ -11,12 +13,12 @@ go_library(
         "types_issuer.go",
         "zz_generated.deepcopy.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/internal/apis/certmanager",
-    visibility = ["//pkg:__subpackages__"],
+    importpath = "github.com/jetstack/cert-manager/pkg/apis/certmanager/v1alpha3",
+    visibility = ["//visibility:public"],
     deps = [
+        "//pkg/apis/acme/v1alpha3:go_default_library",
         "//pkg/apis/certmanager:go_default_library",
-        "//pkg/internal/apis/acme:go_default_library",
-        "//pkg/internal/apis/meta:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
@@ -32,14 +34,7 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [
-        ":package-srcs",
-        "//pkg/internal/apis/certmanager/fuzzer:all-srcs",
-        "//pkg/internal/apis/certmanager/install:all-srcs",
-        "//pkg/internal/apis/certmanager/v1alpha2:all-srcs",
-        "//pkg/internal/apis/certmanager/v1alpha3:all-srcs",
-        "//pkg/internal/apis/certmanager/validation:all-srcs",
-    ],
+    srcs = [":package-srcs"],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
