--- a/pkg/client/informers/externalversions/acme/v1alpha3/BUILD.bazel
+++ b/pkg/client/informers/externalversions/acme/v1alpha3/BUILD.bazel
@@ -3,21 +3,21 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "doc.go",
-        "register.go",
+        "challenge.go",
+        "interface.go",
+        "order.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/client/clientset/versioned/scheme",
+    importpath = "github.com/jetstack/cert-manager/pkg/client/informers/externalversions/acme/v1alpha3",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/apis/acme/v1alpha2:go_default_library",
         "//pkg/apis/acme/v1alpha3:go_default_library",
-        "//pkg/apis/certmanager/v1alpha2:go_default_library",
-        "//pkg/apis/certmanager/v1alpha3:go_default_library",
+        "//pkg/client/clientset/versioned:go_default_library",
+        "//pkg/client/informers/externalversions/internalinterfaces:go_default_library",
+        "//pkg/client/listers/acme/v1alpha3:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
-        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
-        "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
-        "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
+        "@io_k8s_apimachinery//pkg/watch:go_default_library",
+        "@io_k8s_client_go//tools/cache:go_default_library",
     ],
 )
 
