--- a/pkg/internal/apis/certmanager/BUILD.bazel
+++ b/pkg/internal/apis/certmanager/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "doc.go",
+        "generic_issuer.go",
         "register.go",
         "types.go",
         "types_certificate.go",
