--- a/pkg/internal/apis/certmanager/validation/BUILD.bazel
+++ b/pkg/internal/apis/certmanager/validation/BUILD.bazel
@@ -8,12 +8,14 @@ go_library(
         "certificaterequest.go",
         "clusterissuer.go",
         "issuer.go",
+        "register.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/internal/apis/certmanager/validation",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/internal/api/validation:go_default_library",
         "//pkg/internal/apis/acme:go_default_library",
         "//pkg/internal/apis/certmanager:go_default_library",
         "//pkg/internal/apis/certmanager/validation/util:go_default_library",
