--- a/deploy/manifests/00-crds.yaml
+++ b/deploy/manifests/00-crds.yaml
@@ -335,6 +335,43 @@ spec:
               description: SecretName is the name of the secret resource to store
                 this secret in
               type: string
+            subject:
+              description: Full X509 name specification (https://golang.org/pkg/crypto/x509/pkix/#Name).
+              type: object
+              properties:
+                country:
+                  description: Countries to be used on the Certificate.
+                  type: array
+                  items:
+                    type: string
+                locality:
+                  description: Cities to be used on the Certificate.
+                  type: array
+                  items:
+                    type: string
+                organizationalUnit:
+                  description: Organizational Units to be used on the Certificate.
+                  type: array
+                  items:
+                    type: string
+                postalCode:
+                  description: Postal codes to be used on the Certificate.
+                  type: array
+                  items:
+                    type: string
+                province:
+                  description: State/Provinces to be used on the Certificate.
+                  type: array
+                  items:
+                    type: string
+                serialNumber:
+                  description: Serial number to be used on the Certificate.
+                  type: string
+                streetAddress:
+                  description: Street addresses to be used on the Certificate.
+                  type: array
+                  items:
+                    type: string
             uriSANs:
               description: URISANs is a list of URI Subject Alternative Names to be
                 set on this Certificate.
@@ -381,46 +418,6 @@ spec:
                 - ocsp signing
                 - microsoft sgc
                 - netscape sgc
-            x509Name:
-              description: Full X509 name specification (https://golang.org/pkg/crypto/x509/pkix/#Name).
-                If specified, overrides any other name elements below.
-              type: object
-              properties:
-                commonName:
-                  type: string
-                country:
-                  description: Country/Region
-                  type: array
-                  items:
-                    type: string
-                locality:
-                  description: City
-                  type: array
-                  items:
-                    type: string
-                organization:
-                  type: array
-                  items:
-                    type: string
-                organizationalUnit:
-                  type: array
-                  items:
-                    type: string
-                postalCode:
-                  type: array
-                  items:
-                    type: string
-                province:
-                  description: State/Province
-                  type: array
-                  items:
-                    type: string
-                serialNumber:
-                  type: string
-                streetAddress:
-                  type: array
-                  items:
-                    type: string
         status:
           description: CertificateStatus defines the observed state of Certificate
           type: object
