Update test/e2e to no longer deploy using addons
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/test/e2e/charts/BUILD.bazel
+++ b/test/e2e/charts/BUILD.bazel
@@ -22,10 +22,7 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [
-        ":package-srcs",
-        "//test/e2e/charts/pebble:all-srcs",
-    ],
+    srcs = [":package-srcs"],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
