--- a/deploy/charts/cert-manager/crds/challenges.yaml
+++ b/deploy/charts/cert-manager/crds/challenges.yaml
@@ -2,6 +2,8 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: challenges.acme.cert-manager.io
+  annotations:
+    cert-manager.io/inject-ca-from-secret: cert-manager/cert-manager-webhook-tls
 spec:
   additionalPrinterColumns:
   - JSONPath: .status.state
@@ -23,6 +25,17 @@ spec:
     type: date
   group: acme.cert-manager.io
   preserveUnknownFields: false
+  conversion:
+    # a Webhook strategy instruct API server to call an external webhook for any conversion between custom resources.
+    strategy: Webhook
+    # webhookClientConfig is required when strategy is `Webhook` and it configures the webhook endpoint to be called by API server.
+    webhookClientConfig:
+      service:
+        # If you have deployed cert-manager into a namespace other than
+        # 'cert-manager', be sure to update this value.
+        namespace: cert-manager
+        name: cert-manager-webhook
+        path: /convert
   names:
     kind: Challenge
     listKind: ChallengeList
@@ -31,8 +44,15 @@ spec:
   scope: Namespaced
   subresources:
     status: {}
-  validation:
-    openAPIV3Schema:
+  versions:
+  - name: v1alpha2
+    served: true
+    storage: true
+  - name: v1alpha3
+    served: true
+    storage: false
+  "validation":
+    "openAPIV3Schema":
       description: Challenge is a type to represent a Challenge request with an ACME
         server
       type: object
@@ -1384,8 +1404,3 @@ spec:
               - invalid
               - expired
               - errored
-  version: v1alpha2
-  versions:
-  - name: v1alpha2
-    served: true
-    storage: true
