--- a/deploy/charts/cert-manager/crds/issuers.yaml
+++ b/deploy/charts/cert-manager/crds/issuers.yaml
@@ -2,6 +2,8 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: issuers.cert-manager.io
+  annotations:
+    cert-manager.io/inject-ca-from-secret: cert-manager/cert-manager-webhook-tls
 spec:
   additionalPrinterColumns:
   - JSONPath: .status.conditions[?(@.type=="Ready")].status
@@ -20,6 +22,17 @@ spec:
     type: date
   group: cert-manager.io
   preserveUnknownFields: false
+  conversion:
+    # a Webhook strategy instruct API server to call an external webhook for any conversion between custom resources.
+    strategy: Webhook
+    # webhookClientConfig is required when strategy is `Webhook` and it configures the webhook endpoint to be called by API server.
+    webhookClientConfig:
+      service:
+        # If you have deployed cert-manager into a namespace other than
+        # 'cert-manager', be sure to update this value.
+        namespace: cert-manager
+        name: cert-manager-webhook
+        path: /convert
   names:
     kind: Issuer
     listKind: IssuerList
@@ -28,8 +41,15 @@ spec:
   scope: Namespaced
   subresources:
     status: {}
-  validation:
-    openAPIV3Schema:
+  versions:
+  - name: v1alpha2
+    served: true
+    storage: true
+  - name: v1alpha3
+    served: true
+    storage: false
+  "validation":
+    "openAPIV3Schema":
       type: object
       properties:
         apiVersion:
@@ -1731,8 +1751,3 @@ spec:
                   type:
                     description: Type of the condition, currently ('Ready').
                     type: string
-  version: v1alpha2
-  versions:
-  - name: v1alpha2
-    served: true
-    storage: true
