--- a/deploy/charts/cert-manager/crds/orders.yaml
+++ b/deploy/charts/cert-manager/crds/orders.yaml
@@ -2,6 +2,8 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: orders.acme.cert-manager.io
+  annotations:
+    cert-manager.io/inject-ca-from-secret: cert-manager/cert-manager-webhook-tls
 spec:
   additionalPrinterColumns:
   - JSONPath: .status.state
@@ -24,6 +26,17 @@ spec:
     type: date
   group: acme.cert-manager.io
   preserveUnknownFields: false
+  conversion:
+    # a Webhook strategy instruct API server to call an external webhook for any conversion between custom resources.
+    strategy: Webhook
+    # webhookClientConfig is required when strategy is `Webhook` and it configures the webhook endpoint to be called by API server.
+    webhookClientConfig:
+      service:
+        # If you have deployed cert-manager into a namespace other than
+        # 'cert-manager', be sure to update this value.
+        namespace: cert-manager
+        name: cert-manager-webhook
+        path: /convert
   names:
     kind: Order
     listKind: OrderList
@@ -32,8 +45,15 @@ spec:
   scope: Namespaced
   subresources:
     status: {}
-  validation:
-    openAPIV3Schema:
+  versions:
+  - name: v1alpha2
+    served: true
+    storage: true
+  - name: v1alpha3
+    served: true
+    storage: false
+  "validation":
+    "openAPIV3Schema":
       description: Order is a type to represent an Order with an ACME server
       type: object
       required:
@@ -194,8 +214,3 @@ spec:
                 field when the Order is first processed. This field will be immutable
                 after it is initially set.
               type: string
-  version: v1alpha2
-  versions:
-  - name: v1alpha2
-    served: true
-    storage: true
