--- a/deploy/manifests/00-crds.yaml
+++ b/deploy/manifests/00-crds.yaml
@@ -258,7 +258,8 @@ spec:
             commonName:
               description: CommonName is a common name to be used on the Certificate.
                 The CommonName should have a length of 64 characters or fewer to avoid
-                generating invalid CSRs.
+                generating invalid CSRs. This value is ignored by TLS clients when
+                any subject alt name is set.
               type: string
             dnsNames:
               description: DNSNames is a list of subject alt names to be used on the
