--- a/pkg/controller/certificaterequests/venafi/BUILD.bazel
+++ b/pkg/controller/certificaterequests/venafi/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "//pkg/controller/certificaterequests:go_default_library",
         "//pkg/controller/certificaterequests/util:go_default_library",
         "//pkg/internal/venafi:go_default_library",
+        "//pkg/internal/venafi/api:go_default_library",
         "//pkg/issuer:go_default_library",
         "//pkg/logs:go_default_library",
         "@com_github_venafi_vcert//pkg/endpoint:go_default_library",
@@ -46,6 +47,7 @@ go_test(
         "//pkg/controller/certificaterequests:go_default_library",
         "//pkg/controller/test:go_default_library",
         "//pkg/internal/venafi:go_default_library",
+        "//pkg/internal/venafi/api:go_default_library",
         "//pkg/internal/venafi/fake:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
