--- a/pkg/internal/venafi/fake/BUILD.bazel
+++ b/pkg/internal/venafi/fake/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/pkg/internal/venafi/fake",
     visibility = ["//pkg:__subpackages__"],
     deps = [
+        "//pkg/internal/venafi/api:go_default_library",
         "@com_github_venafi_vcert//pkg/certificate:go_default_library",
         "@com_github_venafi_vcert//pkg/endpoint:go_default_library",
         "@com_github_venafi_vcert//pkg/venafi/fake:go_default_library",
