--- a/pkg/internal/venafi/BUILD.bazel
+++ b/pkg/internal/venafi/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     visibility = ["//pkg:__subpackages__"],
     deps = [
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/internal/venafi/api:go_default_library",
         "//pkg/util/pki:go_default_library",
         "@com_github_venafi_vcert//:go_default_library",
         "@com_github_venafi_vcert//pkg/certificate:go_default_library",
@@ -29,6 +30,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//pkg/internal/venafi/api:all-srcs",
         "//pkg/internal/venafi/fake:all-srcs",
     ],
     tags = ["automanaged"],
@@ -45,6 +47,7 @@ go_test(
     deps = [
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/internal/venafi/api:go_default_library",
         "//pkg/internal/venafi/fake:go_default_library",
         "//pkg/util:go_default_library",
         "//pkg/util/pki:go_default_library",
