Document more info on CN behaviour
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/pkg/internal/venafi/BUILD.bazel
+++ b/pkg/internal/venafi/BUILD.bazel
@@ -29,6 +29,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//pkg/internal/venafi/api:all-srcs",
         "//pkg/internal/venafi/fake:all-srcs",
     ],
     tags = ["automanaged"],
