--- a/deploy/charts/cert-manager/crds/certificates.yaml
+++ b/deploy/charts/cert-manager/crds/certificates.yaml
@@ -65,10 +65,10 @@ spec:
           - secretName
           properties:
             commonName:
-              description: CommonName is a common name to be used on the Certificate.
+              description: 'CommonName is a common name to be used on the Certificate.
                 The CommonName should have a length of 64 characters or fewer to avoid
                 generating invalid CSRs. This value is ignored by TLS clients when
-                any subject alt name is set.
+                any subject alt name is set. This is x509 behaviour: https://tools.ietf.org/html/rfc6125#section-6.4.4'
               type: string
             dnsNames:
               description: DNSNames is a list of subject alt names to be used on the
