--- a/pkg/controller/certificates/BUILD.bazel
+++ b/pkg/controller/certificates/BUILD.bazel
@@ -17,6 +17,8 @@ go_library(
         "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/client/listers/certmanager/v1alpha2:go_default_library",
         "//pkg/controller:go_default_library",
+        "//pkg/controller/certificates/codec:go_default_library",
+        "//pkg/controller/certificates/store:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/metrics:go_default_library",
         "//pkg/scheduler:go_default_library",
@@ -52,6 +54,7 @@ go_test(
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller:go_default_library",
+        "//pkg/controller/certificates/codec:go_default_library",
         "//pkg/controller/test:go_default_library",
         "//pkg/util:go_default_library",
         "//pkg/util/pki:go_default_library",
@@ -73,7 +76,11 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [":package-srcs"],
+    srcs = [
+        ":package-srcs",
+        "//pkg/controller/certificates/codec:all-srcs",
+        "//pkg/controller/certificates/store:all-srcs",
+    ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
