--- a/deploy/charts/cert-manager/crds/certificates.yaml
+++ b/deploy/charts/cert-manager/crds/certificates.yaml
@@ -150,6 +150,8 @@ spec:
                   and value must be one of (256, 384, 521) when KeyAlgorithm is set
                   to "ecdsa".
                 type: integer
+                maximum: 8192
+                minimum: 0
               organization:
                 description: Organization is the organization to be used on the Certificate
                 type: array
@@ -389,6 +391,8 @@ spec:
                   and value must be one of (256, 384, 521) when KeyAlgorithm is set
                   to "ecdsa".
                 type: integer
+                maximum: 8192
+                minimum: 0
               renewBefore:
                 description: Certificate renew before expiration duration
                 type: string
