--- a/deploy/manifests/00-crds.yaml
+++ b/deploy/manifests/00-crds.yaml
@@ -1,3 +1,5 @@
+---
+# Source: cert-manager-crds/templates/certificaterequests.yaml
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -204,6 +206,7 @@ spec:
               type: string
               format: date-time
 ---
+# Source: cert-manager-crds/templates/certificates.yaml
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -737,6 +740,7 @@ spec:
                 type: string
                 format: date-time
 ---
+# Source: cert-manager-crds/templates/challenges.yaml
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -2144,6 +2148,7 @@ spec:
               - expired
               - errored
 ---
+# Source: cert-manager-crds/templates/clusterissuers.yaml
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -3898,6 +3903,7 @@ spec:
                     description: Type of the condition, currently ('Ready').
                     type: string
 ---
+# Source: cert-manager-crds/templates/issuers.yaml
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -5652,6 +5658,7 @@ spec:
                     description: Type of the condition, currently ('Ready').
                     type: string
 ---
+# Source: cert-manager-crds/templates/orders.yaml
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
