--- a/deploy/charts/cert-manager-crds/templates/certificates.yaml
+++ b/deploy/charts/cert-manager-crds/templates/certificates.yaml
@@ -28,7 +28,9 @@ spec:
     name: Age
     type: date
   group: cert-manager.io
+  {{- if not .Values.global.isOpenshift }}
   preserveUnknownFields: false
+  {{- end }}
   conversion:
     # a Webhook strategy instruct API server to call an external webhook for any conversion between custom resources.
     strategy: Webhook
@@ -58,7 +60,11 @@ spec:
     "schema":
       "openAPIV3Schema":
         description: Certificate is a type to represent a Certificate from ACME
+        {{- if not .Values.global.isOpenshift }}
         type: object
+        metadata:
+          type: object
+        {{- end }}
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -70,8 +76,6 @@ spec:
               object represents. Servers may infer this from the endpoint the client
               submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
             type: string
-          metadata:
-            type: object
           spec:
             description: CertificateSpec defines the desired state of Certificate.
               A valid Certificate requires at least one of a CommonName, DNSName,
