--- a/deploy/charts/cert-manager-crds/templates/clusterissuers.yaml
+++ b/deploy/charts/cert-manager-crds/templates/clusterissuers.yaml
@@ -21,7 +21,9 @@ spec:
     name: Age
     type: date
   group: cert-manager.io
+  {{- if not .Values.global.isOpenshift }}
   preserveUnknownFields: false
+  {{- end }}
   conversion:
     # a Webhook strategy instruct API server to call an external webhook for any conversion between custom resources.
     strategy: Webhook
@@ -50,7 +52,11 @@ spec:
     storage: false
   "validation":
     "openAPIV3Schema":
+      {{- if not .Values.global.isOpenshift }}
       type: object
+      metadata:
+        type: object
+      {{- end }}
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -62,8 +68,6 @@ spec:
             object represents. Servers may infer this from the endpoint the client
             submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
-        metadata:
-          type: object
         spec:
           description: IssuerSpec is the specification of an Issuer. This includes
             any configuration required for the issuer.
