--- a/deploy/charts/cert-manager-crds/templates/orders.yaml
+++ b/deploy/charts/cert-manager-crds/templates/orders.yaml
@@ -25,7 +25,9 @@ spec:
     name: Age
     type: date
   group: acme.cert-manager.io
+  {{- if not .Values.global.isOpenshift }}
   preserveUnknownFields: false
+  {{- end }}
   conversion:
     # a Webhook strategy instruct API server to call an external webhook for any conversion between custom resources.
     strategy: Webhook
@@ -55,7 +57,11 @@ spec:
   "validation":
     "openAPIV3Schema":
       description: Order is a type to represent an Order with an ACME server
+      {{- if not .Values.global.isOpenshift }}
       type: object
+      metadata:
+        type: object
+      {{- end }}
       required:
       - metadata
       properties:
@@ -69,8 +75,6 @@ spec:
             object represents. Servers may infer this from the endpoint the client
             submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
-        metadata:
-          type: object
         spec:
           type: object
           required:
