--- a/deploy/charts/cert-manager-crds/templates/certificaterequests.yaml
+++ b/deploy/charts/cert-manager-crds/templates/certificaterequests.yaml
@@ -25,7 +25,7 @@ spec:
     name: Age
     type: date
   group: cert-manager.io
-  {{- if not .Values.global.isOpenshift }}
+  {{- if not .Values.isOpenshift }}
   preserveUnknownFields: false
   {{- end }}
   conversion:
@@ -61,7 +61,7 @@ spec:
     "openAPIV3Schema":
       description: CertificateRequest is a type to represent a Certificate Signing
         Request
-      {{- if not .Values.global.isOpenshift }}
+      {{- if not .Values.isOpenshift }}
       type: object
       {{- end }}
       properties:
