--- a/deploy/charts/cert-manager-crds/templates/certificates.yaml
+++ b/deploy/charts/cert-manager-crds/templates/certificates.yaml
@@ -28,7 +28,7 @@ spec:
     name: Age
     type: date
   group: cert-manager.io
-  {{- if not .Values.global.isOpenshift }}
+  {{- if not .Values.isOpenshift }}
   preserveUnknownFields: false
   {{- end }}
   conversion:
@@ -60,7 +60,7 @@ spec:
     "schema":
       "openAPIV3Schema":
         description: Certificate is a type to represent a Certificate from ACME
-        {{- if not .Values.global.isOpenshift }}
+        {{- if not .Values.isOpenshift }}
         type: object
         {{- end }}
         properties:
