--- a/deploy/charts/cert-manager-crds/templates/challenges.yaml
+++ b/deploy/charts/cert-manager-crds/templates/challenges.yaml
@@ -24,7 +24,7 @@ spec:
     name: Age
     type: date
   group: acme.cert-manager.io
-  {{- if not .Values.global.isOpenshift }}
+  {{- if not .Values.isOpenshift }}
   preserveUnknownFields: false
   {{- end }}
   conversion:
@@ -57,7 +57,7 @@ spec:
     "openAPIV3Schema":
       description: Challenge is a type to represent a Challenge request with an ACME
         server
-      {{- if not .Values.global.isOpenshift }}
+      {{- if not .Values.isOpenshift }}
       type: object
       {{- end }}
       required:
