--- a/deploy/manifests/00-crds.yaml
+++ b/deploy/manifests/00-crds.yaml
@@ -2230,7 +2230,7 @@ spec:
                   description: Email is the email for this account
                   type: string
                 externalAccountBinding:
-                  description: ExternalAcccountBinding is a reference to a CA external
+                  description: ExternalAccountBinding is a reference to a CA external
                     account of the ACME server.
                   type: object
                   required:
@@ -3984,7 +3984,7 @@ spec:
                   description: Email is the email for this account
                   type: string
                 externalAccountBinding:
-                  description: ExternalAcccountBinding is a reference to a CA external
+                  description: ExternalAccountBinding is a reference to a CA external
                     account of the ACME server.
                   type: object
                   required:
