--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -13,6 +13,7 @@ filegroup(
         "//test/integration/conversion:all-srcs",
         "//test/integration/ctl:all-srcs",
         "//test/integration/framework:all-srcs",
+        "//test/integration/validation:all-srcs",
         "//test/integration/webhook:all-srcs",
     ],
     tags = ["automanaged"],
