--- a/deploy/charts/cert-manager/crds/issuers.yaml
+++ b/deploy/charts/cert-manager/crds/issuers.yaml
@@ -1531,6 +1531,11 @@ spec:
                   type: string
             selfSigned:
               type: object
+              properties:
+                crlDistributionPoints:
+                  type: array
+                  items:
+                    type: string
             vault:
               type: object
               required:
