--- a/deploy/charts/cert-manager/templates/cainjector-psp-clusterrole.yaml
+++ b/deploy/charts/cert-manager/templates/cainjector-psp-clusterrole.yaml
@@ -6,9 +6,11 @@ metadata:
   name: {{ template "cainjector.fullname" . }}-psp
   labels:
     app: {{ include "cainjector.name" . }}
-    chart: {{ include "cainjector.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    app.kubernetes.io/name: {{ include "cainjector.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/component: "cainjector"
+    helm.sh/chart: {{ include "cainjector.chart" . }}
 rules:
 - apiGroups: ['policy']
   resources: ['podsecuritypolicies']
