--- a/deploy/charts/cert-manager/templates/cainjector-rbac.yaml
+++ b/deploy/charts/cert-manager/templates/cainjector-rbac.yaml
@@ -5,10 +5,11 @@ kind: ClusterRole
 metadata:
   name: {{ template "cainjector.fullname" . }}
   labels:
-    app: {{ template "cainjector.name" . }}
+    app: {{ include "cainjector.name" . }}
     app.kubernetes.io/name: {{ include "cainjector.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/component: "cainjector"
     helm.sh/chart: {{ include "cainjector.chart" . }}
 rules:
   - apiGroups: ["cert-manager.io"]
@@ -35,10 +36,11 @@ kind: ClusterRoleBinding
 metadata:
   name: {{ template "cainjector.fullname" . }}
   labels:
-    app: {{ template "cainjector.name" . }}
+    app: {{ include "cainjector.name" . }}
     app.kubernetes.io/name: {{ include "cainjector.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/component: "cainjector"
     helm.sh/chart: {{ include "cainjector.chart" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -57,11 +59,12 @@ metadata:
   name: {{ template "cainjector.fullname" . }}:leaderelection
   namespace: {{ .Values.global.leaderElection.namespace }}
   labels:
-    app: {{ template "cainjector.name" . }}
-    app.kubernetes.io/name: {{ template "cainjector.name" . }}
+    app: {{ include "cainjector.name" . }}
+    app.kubernetes.io/name: {{ include "cainjector.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ template "cainjector.chart" . }}
+    app.kubernetes.io/component: "cainjector"
+    helm.sh/chart: {{ include "cainjector.chart" . }}
 rules:
   # Used for leader election by the controller
   # TODO: refine the permission to *just* the leader election configmap
@@ -83,6 +86,7 @@ metadata:
     app.kubernetes.io/name: {{ include "cainjector.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/component: "cainjector"
     helm.sh/chart: {{ include "cainjector.chart" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
